// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markAfter renders 0 1`] = `
Array [
  .c0 {
  mark-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders function 1`] = `
Array [
  .c0 {
  mark-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: has;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: has;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders invalid theme path 1`] = `
Array [
  .c0 {
  mark-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders negative number 1`] = `
Array [
  .c0 {
  mark-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  mark-after: July;
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  mark-after: July;
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  mark-after: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-after: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-after: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    mark-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    mark-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark-after: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  mark-after: July;
}

@media May {
  .c0 {
    mark-after: August;
  }
}

@media April {
  .c0 {
    mark-after: September;
  }
}

@media January {
  .c0 {
    mark-after: November;
  }
}

@media April {
  .c0 {
    mark-after: August;
  }
}

@media June {
  .c0 {
    mark-after: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  mark-after: July;
}

@media May {
  .c0 {
    mark-after: August;
  }
}

@media April {
  .c0 {
    mark-after: September;
  }
}

@media January {
  .c0 {
    mark-after: November;
  }
}

@media April {
  .c0 {
    mark-after: August;
  }
}

@media June {
  .c0 {
    mark-after: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  mark-after: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-after: November;
  }
}

@media April {
  .c0 {
    mark-after: January;
  }
}

@media January {
  .c0 {
    mark-after: December;
  }
}

@media April {
  .c0 {
    mark-after: April;
  }
}

@media June {
  .c0 {
    mark-after: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-after: November;
  }
}

@media April {
  .c0 {
    mark-after: January;
  }
}

@media January {
  .c0 {
    mark-after: December;
  }
}

@media April {
  .c0 {
    mark-after: April;
  }
}

@media June {
  .c0 {
    mark-after: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    mark-after: July;
  }
}

@media April {
  .c0 {
    mark-after: August;
  }
}

@media January {
  .c0 {
    mark-after: September;
  }
}

@media April {
  .c0 {
    mark-after: November;
  }
}

@media June {
  .c0 {
    mark-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    mark-after: July;
  }
}

@media April {
  .c0 {
    mark-after: August;
  }
}

@media January {
  .c0 {
    mark-after: September;
  }
}

@media April {
  .c0 {
    mark-after: November;
  }
}

@media June {
  .c0 {
    mark-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-after: January;
  }
}

@media April {
  .c0 {
    mark-after: December;
  }
}

@media January {
  .c0 {
    mark-after: April;
  }
}

@media April {
  .c0 {
    mark-after: May;
  }
}

@media June {
  .c0 {
    mark-after: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark-after: January;
  }
}

@media April {
  .c0 {
    mark-after: December;
  }
}

@media January {
  .c0 {
    mark-after: April;
  }
}

@media April {
  .c0 {
    mark-after: May;
  }
}

@media June {
  .c0 {
    mark-after: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders postitive number 1`] = `
Array [
  .c0 {
  mark-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders string 1`] = `
Array [
  .c0 {
  mark-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: June;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: June;
}

<div
    className="c0"
  />,
]
`;

exports[`markAfter renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`markAfter renders valid theme path 1`] = `
Array [
  .c0 {
  mark-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
